// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`07 O8 — shipment writes: the routes answer exactly as before the move > create one, bulk create, and their refusals 1`] = `
[
  {
    "body": {
      "error": "orderId is required",
    },
    "status": 400,
  },
  {
    "body": {
      "error": "Order not found",
    },
    "status": 404,
  },
  {
    "body": {
      "cancelledAt": null,
      "carrierCode": "MANUAL",
      "costCents": null,
      "createdAt": "<made>",
      "currencyCode": "EUR",
      "deletedAt": null,
      "deliveredAt": null,
      "heightCm": null,
      "heldAt": "<made>",
      "heldReason": null,
      "id": "<made>",
      "items": [
        {
          "id": "<made>",
          "orderItemId": "<made>",
          "productId": null,
          "quantity": 1,
          "shipmentId": "<made>",
          "sku": "TEST-SKU-single",
          "workspaceId": "<made>",
        },
      ],
      "labelPrintedAt": "<made>",
      "labelUrl": null,
      "lengthCm": null,
      "notes": null,
      "orderId": "test-order-single",
      "packedAt": null,
      "packedBy": null,
      "pickedAt": null,
      "pickedBy": null,
      "sendcloudParcelId": null,
      "serviceCode": null,
      "serviceName": null,
      "shippedAt": null,
      "status": "DRAFT",
      "trackingNumber": null,
      "trackingPushError": null,
      "trackingPushedAt": null,
      "trackingUrl": null,
      "updatedAt": "<made>",
      "version": 1,
      "warehouseId": "test-wh",
      "weightGrams": null,
      "widthCm": null,
      "workspaceId": "<made>",
    },
    "status": 200,
  },
  {
    "body": {
      "error": "orderIds[] required",
    },
    "status": 400,
  },
  {
    "body": {
      "created": 2,
      "errors": [
        {
          "orderId": "test-order-single",
          "reason": "shipment already exists",
        },
        {
          "orderId": "test-order-none",
          "reason": "order not found",
        },
      ],
      "routing": {
        "test-order-bulk1": {
          "ruleName": null,
          "source": "EXPLICIT_OVERRIDE",
          "warehouseId": "test-wh",
        },
        "test-order-bulk2": {
          "ruleName": null,
          "source": "EXPLICIT_OVERRIDE",
          "warehouseId": "test-wh",
        },
      },
    },
    "status": 200,
  },
  [
    {
      "carrierCode": "SENDCLOUD",
      "costCents": null,
      "heldReason": null,
      "id": "<made>",
      "labelUrl": null,
      "sendcloudParcelId": null,
      "serviceCode": null,
      "serviceName": null,
      "status": "DRAFT",
      "trackingNumber": null,
    },
  ],
]
`;

exports[`07 O8 — shipment writes: the routes answer exactly as before the move > hold, release, service, void label 1`] = `
[
  {
    "body": {
      "cancelledAt": null,
      "carrierCode": "SENDCLOUD",
      "costCents": null,
      "createdAt": "<made>",
      "currencyCode": "EUR",
      "deletedAt": null,
      "deliveredAt": null,
      "heightCm": null,
      "heldAt": "<made>",
      "heldReason": "Check the address",
      "id": "<made>",
      "labelPrintedAt": "<made>",
      "labelUrl": null,
      "lengthCm": null,
      "notes": null,
      "orderId": "test-order-service",
      "packedAt": null,
      "packedBy": null,
      "pickedAt": null,
      "pickedBy": null,
      "sendcloudParcelId": null,
      "serviceCode": null,
      "serviceName": null,
      "shippedAt": null,
      "status": "ON_HOLD",
      "trackingNumber": null,
      "trackingPushError": null,
      "trackingPushedAt": null,
      "trackingUrl": null,
      "updatedAt": "<made>",
      "version": 2,
      "warehouseId": null,
      "weightGrams": null,
      "widthCm": null,
      "workspaceId": "<made>",
    },
    "status": 200,
  },
  {
    "body": {
      "cancelledAt": null,
      "carrierCode": "SENDCLOUD",
      "costCents": null,
      "createdAt": "<made>",
      "currencyCode": "EUR",
      "deletedAt": null,
      "deliveredAt": null,
      "heightCm": null,
      "heldAt": "<made>",
      "heldReason": "Manually held by operator",
      "id": "<made>",
      "labelPrintedAt": "<made>",
      "labelUrl": null,
      "lengthCm": null,
      "notes": null,
      "orderId": "test-order-service",
      "packedAt": null,
      "packedBy": null,
      "pickedAt": null,
      "pickedBy": null,
      "sendcloudParcelId": null,
      "serviceCode": null,
      "serviceName": null,
      "shippedAt": null,
      "status": "ON_HOLD",
      "trackingNumber": null,
      "trackingPushError": null,
      "trackingPushedAt": null,
      "trackingUrl": null,
      "updatedAt": "<made>",
      "version": 3,
      "warehouseId": null,
      "weightGrams": null,
      "widthCm": null,
      "workspaceId": "<made>",
    },
    "status": 200,
  },
  {
    "body": {
      "cancelledAt": null,
      "carrierCode": "SENDCLOUD",
      "costCents": null,
      "createdAt": "<made>",
      "currencyCode": "EUR",
      "deletedAt": null,
      "deliveredAt": null,
      "heightCm": null,
      "heldAt": "<made>",
      "heldReason": null,
      "id": "<made>",
      "labelPrintedAt": "<made>",
      "labelUrl": null,
      "lengthCm": null,
      "notes": null,
      "orderId": "test-order-service",
      "packedAt": null,
      "packedBy": null,
      "pickedAt": null,
      "pickedBy": null,
      "sendcloudParcelId": null,
      "serviceCode": null,
      "serviceName": null,
      "shippedAt": null,
      "status": "DRAFT",
      "trackingNumber": null,
      "trackingPushError": null,
      "trackingPushedAt": null,
      "trackingUrl": null,
      "updatedAt": "<made>",
      "version": 4,
      "warehouseId": null,
      "weightGrams": null,
      "widthCm": null,
      "workspaceId": "<made>",
    },
    "status": 200,
  },
  {
    "body": {
      "error": "Shipment is not on hold (status: DRAFT)",
    },
    "status": 400,
  },
  {
    "body": {
      "error": "Cannot hold a shipment in status LABEL_PRINTED. Void the label first if needed.",
    },
    "status": 400,
  },
  {
    "body": {
      "cancelledAt": null,
      "carrierCode": "SENDCLOUD",
      "costCents": null,
      "createdAt": "<made>",
      "currencyCode": "EUR",
      "deletedAt": null,
      "deliveredAt": null,
      "heightCm": null,
      "heldAt": "<made>",
      "heldReason": null,
      "id": "<made>",
      "labelPrintedAt": "<made>",
      "labelUrl": null,
      "lengthCm": null,
      "notes": null,
      "orderId": "test-order-service",
      "packedAt": null,
      "packedBy": null,
      "pickedAt": null,
      "pickedBy": null,
      "sendcloudParcelId": null,
      "serviceCode": "2001",
      "serviceName": "Test Standard",
      "shippedAt": null,
      "status": "DRAFT",
      "trackingNumber": null,
      "trackingPushError": null,
      "trackingPushedAt": null,
      "trackingUrl": null,
      "updatedAt": "<made>",
      "version": 5,
      "warehouseId": null,
      "weightGrams": null,
      "widthCm": null,
      "workspaceId": "<made>",
    },
    "status": 200,
  },
  {
    "body": {
      "error": "Cannot change service after label printed. Void the label first.",
    },
    "status": 400,
  },
  {
    "body": {
      "error": "Cannot void from status DRAFT. Only LABEL_PRINTED labels can be voided.",
    },
    "status": 400,
  },
  {
    "body": {
      "cancelledAt": null,
      "carrierCode": "SENDCLOUD",
      "costCents": null,
      "createdAt": "<made>",
      "currencyCode": "EUR",
      "deletedAt": null,
      "deliveredAt": null,
      "heightCm": null,
      "heldAt": "<made>",
      "heldReason": null,
      "id": "<made>",
      "labelPrintedAt": "<made>",
      "labelUrl": null,
      "lengthCm": null,
      "notes": null,
      "orderId": "test-order-sendcloud",
      "packedAt": null,
      "packedBy": null,
      "pickedAt": null,
      "pickedBy": null,
      "sendcloudParcelId": null,
      "serviceCode": null,
      "serviceName": null,
      "shippedAt": null,
      "status": "PACKED",
      "trackingNumber": null,
      "trackingPushError": null,
      "trackingPushedAt": null,
      "trackingUrl": null,
      "updatedAt": "<made>",
      "version": 3,
      "warehouseId": "test-wh",
      "weightGrams": 1200,
      "widthCm": null,
      "workspaceId": "<made>",
    },
    "status": 200,
  },
  [
    7001,
  ],
  [
    {
      "carrierCode": "SENDCLOUD",
      "costCents": null,
      "heldReason": null,
      "id": "<made>",
      "labelUrl": null,
      "sendcloudParcelId": null,
      "serviceCode": null,
      "serviceName": null,
      "status": "PACKED",
      "trackingNumber": null,
    },
  ],
  {
    "body": {
      "error": "Shipment not found",
    },
    "status": 404,
  },
]
`;

exports[`07 O8 — shipment writes: the routes answer exactly as before the move > print label: MANUAL, Sendcloud, Amazon Buy Shipping, a wrong channel, unknown 1`] = `
[
  {
    "body": {
      "_hint": "No label generated. Open the shipment drawer and paste the carrier-issued tracking number to push it to the channel.",
      "cancelledAt": null,
      "carrierCode": "MANUAL",
      "costCents": null,
      "createdAt": "<made>",
      "currencyCode": "EUR",
      "deletedAt": null,
      "deliveredAt": null,
      "heightCm": null,
      "heldAt": "<made>",
      "heldReason": null,
      "id": "<made>",
      "labelPrintedAt": "<made>",
      "labelUrl": null,
      "lengthCm": null,
      "notes": null,
      "orderId": "test-order-manual",
      "packedAt": null,
      "packedBy": null,
      "pickedAt": null,
      "pickedBy": null,
      "sendcloudParcelId": null,
      "serviceCode": null,
      "serviceName": null,
      "shippedAt": null,
      "status": "LABEL_PRINTED",
      "trackingNumber": null,
      "trackingPushError": null,
      "trackingPushedAt": null,
      "trackingUrl": null,
      "updatedAt": "<made>",
      "version": 2,
      "warehouseId": "test-wh",
      "weightGrams": 1200,
      "widthCm": null,
      "workspaceId": "<made>",
    },
    "status": 200,
  },
  {
    "body": {
      "cancelledAt": null,
      "carrierCode": "SENDCLOUD",
      "costCents": null,
      "createdAt": "<made>",
      "currencyCode": "EUR",
      "deletedAt": null,
      "deliveredAt": null,
      "heightCm": null,
      "heldAt": "<made>",
      "heldReason": null,
      "id": "<made>",
      "labelPrintedAt": "<made>",
      "labelUrl": "https://label.example.test/7001.pdf",
      "lengthCm": null,
      "notes": null,
      "orderId": "test-order-sendcloud",
      "packedAt": null,
      "packedBy": null,
      "pickedAt": null,
      "pickedBy": null,
      "sendcloudParcelId": "7001",
      "serviceCode": "Test Standard",
      "serviceName": "Test Standard",
      "shippedAt": null,
      "status": "LABEL_PRINTED",
      "trackingNumber": "TEST-SC-7001",
      "trackingPushError": null,
      "trackingPushedAt": null,
      "trackingUrl": "https://track.example.test/7001",
      "updatedAt": "<made>",
      "version": 2,
      "warehouseId": "test-wh",
      "weightGrams": 1200,
      "widthCm": null,
      "workspaceId": "<made>",
    },
    "status": 200,
  },
  {
    "body": {
      "cancelledAt": null,
      "carrierCode": "AMAZON_BUY_SHIPPING",
      "costCents": 550,
      "createdAt": "<made>",
      "currencyCode": "EUR",
      "deletedAt": null,
      "deliveredAt": null,
      "heightCm": null,
      "heldAt": "<made>",
      "heldReason": null,
      "id": "<made>",
      "labelPrintedAt": "<made>",
      "labelUrl": "data:application/pdf;base64,JVBERi0xLjQ=",
      "lengthCm": null,
      "notes": null,
      "orderId": "test-order-amazon",
      "packedAt": null,
      "packedBy": null,
      "pickedAt": null,
      "pickedBy": null,
      "sendcloudParcelId": null,
      "serviceCode": "TEST-SVC",
      "serviceName": "DPD",
      "shippedAt": null,
      "status": "LABEL_PRINTED",
      "trackingNumber": "TEST-BS-TRACK-1",
      "trackingPushError": null,
      "trackingPushedAt": null,
      "trackingUrl": null,
      "updatedAt": "<made>",
      "version": 2,
      "warehouseId": "test-wh",
      "weightGrams": 1200,
      "widthCm": null,
      "workspaceId": "<made>",
    },
    "status": 200,
  },
  {
    "body": {
      "code": "BUY_SHIPPING_WRONG_CHANNEL",
      "error": "Amazon Buy Shipping is only valid for Amazon-channel orders.",
    },
    "status": 400,
  },
  {
    "body": {
      "error": "Shipment not found",
    },
    "status": 404,
  },
  [
    {
      "address": "Via Test 1",
      "city": "Testville",
      "country": "IT",
      "email": "buyer@example.test",
      "external_reference": "<made>",
      "name": "Test Buyer",
      "order_number": "TEST-sendcloud",
      "parcel_items": [
        {
          "description": "TEST-SKU-sendcloud",
          "quantity": 1,
          "sku": "TEST-SKU-sendcloud",
          "value": "20.00",
          "weight": "0.100",
        },
      ],
      "postal_code": "00100",
      "request_label": true,
      "total_order_value": "20.00",
      "total_order_value_currency": "EUR",
      "weight": "1.200",
    },
  ],
  [
    {
      "carrierCode": "SENDCLOUD",
      "costCents": null,
      "heldReason": null,
      "id": "<made>",
      "labelUrl": "https://label.example.test/7001.pdf",
      "sendcloudParcelId": "7001",
      "serviceCode": "Test Standard",
      "serviceName": "Test Standard",
      "status": "LABEL_PRINTED",
      "trackingNumber": "TEST-SC-7001",
    },
  ],
  [
    {
      "carrierCode": "AMAZON_BUY_SHIPPING",
      "costCents": 550,
      "heldReason": null,
      "id": "<made>",
      "labelUrl": "data:application/pdf;base64,JVBERi0xLjQ=",
      "sendcloudParcelId": null,
      "serviceCode": "TEST-SVC",
      "serviceName": "DPD",
      "status": "LABEL_PRINTED",
      "trackingNumber": "TEST-BS-TRACK-1",
    },
  ],
]
`;

exports[`07 O8 — shipment writes: the routes answer exactly as before the move > return label: generated once; a second time refused; unknown 1`] = `
[
  {
    "body": {
      "dryRun": true,
      "return": {
        "channel": "EBAY",
        "channelRefundError": null,
        "channelRefundId": null,
        "channelRefundedAt": null,
        "channelReturnId": null,
        "conditionGrade": null,
        "createdAt": "<made>",
        "currencyCode": "EUR",
        "defectReportedAt": null,
        "id": "<made>",
        "idempotencyKey": null,
        "inspectedAt": null,
        "isFbaReturn": false,
        "manufacturerRef": null,
        "marketplace": null,
        "notes": null,
        "orderId": "test-order-returned",
        "reason": null,
        "receivedAt": null,
        "refundCents": null,
        "refundStatus": "PENDING",
        "refundedAt": null,
        "restockChannel": null,
        "restockWarehouseId": null,
        "restockedAt": null,
        "returnLabelCarrier": "SENDCLOUD",
        "returnLabelEmailedAt": null,
        "returnLabelGeneratedAt": "<made>",
        "returnLabelUrl": "https://label.example.test/7002.pdf",
        "returnTrackingNumber": "TEST-SC-7002",
        "returnType": "STANDARD",
        "rmaNumber": "TEST-RMA-1",
        "sendcloudParcelId": "7002",
        "status": "REQUESTED",
        "updatedAt": "<made>",
        "version": 1,
        "warrantyResolution": null,
        "warrantyStatus": null,
        "workspaceId": "<made>",
      },
      "success": true,
    },
    "status": 200,
  },
  {
    "body": {
      "code": "LABEL_EXISTS",
      "error": "Label already exists — remove the existing label first",
    },
    "status": 409,
  },
  {
    "body": {
      "error": "Return not found",
    },
    "status": 404,
  },
  [
    {
      "address": "Via Test 1",
      "city": "Testville",
      "country": "IT",
      "email": "buyer@example.test",
      "external_reference": "<made>",
      "is_return": true,
      "name": "Test Buyer",
      "order_number": "TEST-RMA-1",
      "parcel_items": [
        {
          "description": "TEST-SKU-returned",
          "quantity": 1,
          "sku": "TEST-SKU-returned",
          "value": "20.00",
          "weight": "0.100",
        },
      ],
      "postal_code": "00100",
      "total_order_value": "20.00",
      "total_order_value_currency": "EUR",
      "weight": "1.500",
    },
  ],
]
`;
